+ Added Images to Buttons + Added Titles and images to individual activities

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
             android:layout_marginBottom="32dp"
             android:background="@android:color/holo_green_dark"
             android:text="Money"
+            android:drawableTop="@drawable/ic_euro_symbol_black_24dp"
             app:layout_constraintBottom_toTopOf="@+id/Employment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/Housing"
@@ -69,6 +70,7 @@
             android:layout_marginBottom="32dp"
             android:background="@android:color/holo_red_light"
             android:text="Housing"
+            android:drawableTop="@drawable/ic_home_black_24dp"
             app:layout_anchor="@+id/Communication"
             app:layout_anchorGravity="bottom|center"
             app:layout_constraintBottom_toTopOf="@+id/Communication"
@@ -86,6 +88,7 @@
             android:layout_marginBottom="108dp"
             android:background="@android:color/holo_blue_bright"
             android:text="Communication"
+            android:drawableTop="@drawable/ic_record_voice_over_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/Employment"
             app:layout_constraintStart_toStartOf="parent"
@@ -102,6 +105,7 @@
             android:layout_marginBottom="108dp"
             android:background="@android:color/holo_orange_dark"
             android:text="Employment"
+            android:drawableTop="@drawable/ic_work_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/Communication"
