--- a/app/src/main/res/layout/communication_activity_layout.xml
+++ b/app/src/main/res/layout/communication_activity_layout.xml
@@ -19,19 +19,13 @@
         layout="@layout/content_main" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_vol" />
-
-    <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|left"
         android:layout_margin="@dimen/fab_margin"
+        android:scaleType="center"
+        app:fabSize="normal"
         app:srcCompat="@drawable/ic_back" />
 
 
