--- a/app/src/main/res/layout/employment_activity_layout.xml
+++ b/app/src/main/res/layout/employment_activity_layout.xml
@@ -19,21 +19,14 @@
         layout="@layout/content_main" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_vol" />
-
-    <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|left"
+        android:layout_gravity="bottom|start"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_back" />
-
+        android:scaleType="center"
+        app:fabSize="normal"
+        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
 
 
     <android.support.constraint.ConstraintLayout
@@ -134,7 +127,7 @@
             android:layout_marginEnd="40dp"
             android:layout_marginBottom="108dp"
             android:background="@android:color/holo_orange_dark"
-            android:text="Intreo Centre"
+            android:text="Rights Review Committee"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/BottomLeft"
