--- a/app/src/main/res/layout/housing_activity_layout.xml
+++ b/app/src/main/res/layout/housing_activity_layout.xml
@@ -114,6 +114,7 @@
             android:layout_marginEnd="28dp"
             android:layout_marginBottom="108dp"
             android:background="@android:color/holo_red_light"
+            android:text="Complaints"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/BottomRight"
             app:layout_constraintStart_toStartOf="parent"
